# scripts

./: .env.example  .flake8  .gitignore  README.md  copy-file-content-recursively.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
crowler/: main.py  pyvenv.cfg
crowler/ai/: ai_client.py  ai_client_factory.py
crowler/cli/: app.py  app_factory.py  code_app.py  file_app.py  html_app.py  process_app.py  prompt_app.py
crowler/cmd/: command_runner.py
crowler/db/: history_db.py  html_db.py  process_file_db.py  prompt_db.py
crowler/util/: ai_util.py  file_util.py  html_util.py  string_util.py
kirby/: log.py  main.py
kirby/ai/: ai_client.py  ai_client_config.py  ai_client_factory.py  ai_client_interface.py
kirby/cli/: add_app.py  app.py  app_cli.py  clear_app.py  code_app.py  file_app.py  file_cli.py  instruction_cli.py  list_app.py  process_app.py  prompt_app.py  remove_app.py  undo_app.py
kirby/cmd/: command_runner.py
kirby/config/: log_setup.py
kirby/db/: file_db.py  file_history_db.py  history_db.py  instruction_db.py  process_file_db.py  prompt_db.py  shared_file_db.py
kirby/instruction/: code_cli.py  code_review.py  instruction_config.py  instruction_model.py  readme.py  response_format.py  unit_test.py
kirby/util/: ai_util.py  file_util.py  session_util.py  string_util.py
prompt_craft/: main.py
prompt_craft/ai/: ai_client.py  ai_client_factory.py
prompt_craft/cli/: app.py  code_app.py  file_app.py  process_app.py  prompt_app.py
prompt_craft/db/: file_history_db.py  process_file_db.py  prompt_db.py  shared_file_db.py
prompt_craft/util/: file_util.py  string_util.py
sasori/: main.py
sasori/cli/: app.py
sasori/db/: html_db.py
sasori/util/: html_crawler.py
src/: kirby.py  logging_setup.py
src/ai/: ai_client_interface.py
src/cli/: app_cli.py  code_cli.py  digest_cli.py  (+2 more)
tests/: test_ai_util.py  test_file_util.py  test_logging_setup.py
(+134 files in other folders)
